# KIV-UPS

./: CMakeLists.txt  c.txt
src/: Game.cpp  Game.hpp  Game.py  GameSecond.py  LogikClient.py  Messages.cpp  Messages.hpp  Player.cpp  Player.hpp  SocketLib.cpp  SocketLib.hpp  SocketLib.py  client.py  client2.py  server.cpp  server.hpp
